--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/user-event": "^7.1.2",
     "crypto-js": "^4.1.1",
+    "html-entities": "^2.3.3",
+    "install": "^0.13.0",
+    "npm": "^8.17.0",
     "prop-types": "^15.8.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
